--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Projeto redes sociais</title>
 </head>
 <body>
-    <h1>hihik</h1>
+    <main>
+        <section id="telefone">
+           
+        </section>
+        <section id="redes sociais">
+            
+        </section>
+    </main>
 </body>
 </html>
